--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # limpa instalação posterior, caso exista
-rm -rf ./env 2&> /dev/null
+rm -rf ./env 2> /dev/null
 
 
 # instala python, pip e módulo de venv
