--- a/build
+++ b/build
@@ -17,3 +17,7 @@ source ./env/bin/activate
 
 # instala dependencias do python
 pip install -r ./requirements.txt
+
+# inicializa executaveis
+
+chmod +x ./run_zumbi
