--- a/build
+++ b/build
@@ -16,7 +16,8 @@ python3 -m venv env
 source ./env/bin/activate
 
 # instala dependencias do python
-pip install -r ./requirements.txt
+#pip install -r ./requirements.txt
+python -m pip install -r requirements.txt --user
 
 # inicializa executaveis
 
